--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* cont is short for container */
@@ -30,6 +31,10 @@
     --font-colour2: #7289da;
 }
 
+a:link {
+    text-decoration: none;
+}
+
 /* #endregion common */
 
 /* #region header */
@@ -37,6 +42,8 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: var(--header-colour);
+
 
     div{
         margin: 2rem 0rem;
@@ -46,6 +53,7 @@ header {
 
 a {
     margin: 0rem 0.5rem;
+    color: white;
 }
 
 .logo {
@@ -54,6 +62,13 @@ a {
 
 .login {
     padding-right: 0.5rem;
+
+    button {
+        padding: 0.5rem 0.75rem;
+        border: none;
+        border-radius: 1rem;
+        background-color: white;
+    }
 }
 
 /* #endregion header */
