--- a/assets/style.css
+++ b/assets/style.css
@@ -109,19 +109,20 @@ a {
     div {
         width: 60%;
         height: 70%;
-        font-size: x-large;
-        line-height: 2rem;
+        line-height: 2.5rem;
 
         h1 {
             text-align: center;
             color: white;
-            padding: 1rem 2rem;
+            padding: 5rem;
+            font-size: 4rem;
         }
 
         p {
             text-align: center;
             color: white;
-            padding: 1rem 2rem;
+            padding: 0rem 4rem 2rem;
+            font-size: x-large;
         }
     }
 }
@@ -146,16 +147,36 @@ a {
     align-items: center;
     width: 100%;
     height: 500px;
+    margin: 5rem 0rem;
 
     div {
-        background-color: var(--main-middlesect-background-blue);
         width: 50%;
-        height: 70%;
+        height: 100%;
+    }
+
+    .background1 {
+        background-image: url(../assets/img/item1.svg);
+        background-size: contain;
+        background-repeat: no-repeat;
     }
 
     :last-child {
-        background-color: var(--main-middlesect-background-pink);
         width: 30%;
+        
+        h1 {
+            text-align: left;
+            color: var(--font-colour1);
+            padding: 2.5rem 2.5rem 0rem;
+            font-size: 3rem;
+        }
+
+        p {
+            width: auto;
+            text-align: left;
+            color: var(--font-colour1);
+            padding: 2.5rem;
+            font-size: x-large;
+        }
     }
 }
 
