--- a/assets/style.css
+++ b/assets/style.css
@@ -181,22 +181,43 @@ a {
 }
 
 .sect3 {
-    background-color: var(--main-cont-background);
+    background-color: var(--background-colour);
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 500px;
+    margin: 5rem 0rem;
 
     div {
-        background-color: var(--main-middlesect-background-pink);
-        width: 30%;
-        height: 70%;
+        width: 50%;
+        height: 100%;
+    }
+    
+    .background2 {
+        width: 50%;
+        background-image: url(../assets/img/item2.svg);
+        background-size: contain;
+        background-repeat: no-repeat;
     }
 
-    :last-child {
-        background-color: var(--main-middlesect-background-blue);
-        width: 50%;
+    :first-child {
+        width: 30%;
+
+        h1 {
+            text-align: left;
+            color: var(--font-colour1);
+            padding: 2.5rem 2.5rem 0rem;
+            font-size: 3rem;
+        }
+
+        p {
+            width: auto;
+            text-align: left;
+            color: var(--font-colour1);
+            padding: 2.5rem;
+            font-size: x-large;
+        }
     }
 }
 
