--- a/assets/style.css
+++ b/assets/style.css
@@ -51,7 +51,7 @@ header {
     background-color: var(--header-colour);
 
 
-    div{
+    div {
         margin: 2rem 0rem;
         padding: 0.2rem 10rem;
     }
@@ -162,7 +162,7 @@ a {
 
     :last-child {
         width: 30%;
-        
+
         h1 {
             text-align: left;
             color: var(--font-colour1);
@@ -193,7 +193,7 @@ a {
         width: 50%;
         height: 100%;
     }
-    
+
     .background2 {
         width: 50%;
         background-image: url(../assets/img/item2.svg);
@@ -221,6 +221,7 @@ a {
     }
 }
 
+
 .sect4 {
     display: flex;
     justify-content: center;
@@ -242,7 +243,7 @@ a {
 
     :last-child {
         width: 30%;
-        
+
         h1 {
             text-align: left;
             color: var(--font-colour1);
@@ -264,17 +265,44 @@ a {
 
 /* #region final section */
 .sect5 {
-    background-color: var(--main-cont-background);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 1000px;
-    
+    height: 100%;
+    background-color: var(--background-colour);
+    background-size: contain;
+    padding: 5rem;
+
     div {
-        background-color: var(--main-finalsect-background);
-        width: 80%;
-        height: 70%;
+        text-align: center;
+
+        button {
+            font-size: large;
+            border-radius: 2rem;
+            padding: 1rem 2rem;
+            margin: 0rem 1rem;
+            background-color: var(--button2);
+        }
+
+        h1 {
+            text-align: center;
+            color: var(--font-colour1);
+            padding: 2.5rem 2.5rem 0rem;
+            font-size: 3rem;
+        }
+
+        p {
+            width: auto;
+            text-align: center;
+            background-image: url(../assets/img/stars.svg);
+            background-size: contain;
+            background-repeat: no-repeat;
+            color: var(--font-colour1);
+            padding: 2.5rem;
+            font-size: x-large;
+        }
     }
 }
 
