--- a/assets/style.css
+++ b/assets/style.css
@@ -168,13 +168,13 @@ a {
 }
 
 .sect3 {
-    background-color: var(--background-colour);
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 500px;
     margin: 5rem 0rem;
+    background-color: var(--background-colour);
 
     div {
         width: 50%;
@@ -258,9 +258,8 @@ a {
     align-items: center;
     width: 100%;
     height: 100%;
-    background-color: var(--background-colour);
-    background-size: contain;
     padding: 5rem;
+    background-color: var(--background-colour);
 
     div {
         text-align: center;
@@ -344,6 +343,15 @@ a {
 
         span {
             margin: 0.2rem;
+        }
+    }
+
+    .social {
+        display: inline;
+
+        img {
+            margin: 0.2rem;
+            width: 5%;
         }
     }
 }
