--- a/assets/style.css
+++ b/assets/style.css
@@ -178,6 +178,7 @@ a {
     width: 100%;
     height: 500px;
     margin: 0 0 5rem 0rem;
+    background-color: var(--background-colour);
 
     div {
         width: 50%;
@@ -267,6 +268,7 @@ a {
     height: 100%;
     padding: 5rem;
     margin: 0 0 5rem 0rem;
+    background-color: var(--background-colour);
 
     div {
         text-align: center;
